# mazerunner

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
agents/: Annealing.py
backend/: __init__.py  export_trajectory.py  trajectory.py
data/: dqn_adam.json  dqn_levenberg_marquardt.json  experiment_results.json  genetic.json  kohonen.json  kohonen_adam.json  kohonen_extended_kalman_filter.json  metropolis.json  simulated_annealing.json  tiny_dqn_adam.json  tiny_dqn_extended_kalman_filter.json  tiny_dqn_levenberg_marquardt.json  trajectories.json  trajectory.json  trajectory.schema.json
frontend/: app.js  index.html  styles.css
notebooks/: env.ipynb  results.ipynb
pages/: index.html
report/: bibliography.bib  report.tex
src/: backend.py  domain.py  experiments.py  grid.py  optimizer_factory.py  trajectory.py
src/solvers/: __init__.py  astar.py  dqn.py  kohonen.py  route.py
tests/: test_backend.py
