[project]
name = "mazerunner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pygame>=2.6.1",
    "torch>=2.9.1",
]

[project.scripts]
mazerunner-backend = "backend:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["backend", "trajectory", "domain", "grid", "optimizer_factory"]
packages = ["solvers"]
